@startuml

abstract class Game {
    + action() : void
    + difficultyIncrease() : void
    + {abstract} getEnemyRandom(double seed): EnemyAircraft
    - getEnemyAction() : void
    - shootAction() : void
    - bulletsPropsMoveAction() : void
    - aircraftsMoveAction() : void
    - crashCheckAction() : void
    - postProcessAction() : void
    + repaint() : void
    + {abstract} paintBackground(Graphics g): void
    + checkResultAction() : void
}

class EasyGame {
     + getEnemyRandom(double seed): EnemyAircraft
     + paintBackground(Graphics g): void
}

class NormalGame {
     + difficultyIncrease() : void
     + getEnemyRandom(double seed): EnemyAircraft
     + paintBackground(Graphics g): void

}

class DifficultGame {
     + difficultyIncrease() : void
     + getEnemyRandom(double seed): EnemyAircraft
     + paintBackground(Graphics g): void
}

EasyGame -up-|> Game
NormalGame -up-|> Game
DifficultGame -up-|> Game

@enduml